base/smplapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smplapp1
  namespace: smplapp
  labels:
    app: smplapp1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smplapp1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: smplapp1
    spec:
      containers:
      - name: smplapp-app
        image: harbor.dh1.div1.opendoor.local/smplapp/app-otel:latest
        #imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
            cpu: "2000m"
        volumeMounts:
        - name: fpm-shared
          mountPath: /var/run/php-fpm
        - name: appstore-logs
          mountPath: /var/www/webapp/writable/logs
        - name: appstore-debugbar
          mountPath: /var/www/webapp/writable/debugbar

      - name: smplapp-nginx
        image: harbor.dh1.div1.opendoor.local/smplapp/nginx-otel:latest
        #imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: liveness-port
          containerPort: 8080
        volumeMounts:
        - name: fpm-shared
          mountPath: /var/run/php-fpm

        # probes
        livenessProbe:
          httpGet:
            path: /index.php
            port: liveness-port
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.php
            port: liveness-port
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
        startupProbe:
          httpGet:
            path: /index.php
            port: liveness-port
          failureThreshold: 6
          periodSeconds: 10

      # application-log shipping sidecar
      - name: fluent-bit
        #image: cr.fluentbit.io/fluent/fluent-bit:3.0.7
        image: harbor.dh1.div1.opendoor.local/hub.docker.com/fluent/fluent-bit:3.0.7-debug
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
          - name: appstore-logs
            mountPath: /appstore/writable/logs
          - name: smplapp1-fb-config
            mountPath: /fluent-bit/etc

      # application-log housekeeping sidecar
      - name: smplapp1-delete-logs
        image: harbor.dh1.div1.opendoor.local/hub.docker.com/ubuntu:24.04
        resources:
          requests:
            memory: "32Mi"
            cpu: "20m"
          limits:
            memory: "32Mi"
            cpu: "50m"
        command: ["bash", "-c", "--"]
        args: ["while :; do sh /appstore/deletelogs/log_compress.sh; sleep 300; done;"]
        volumeMounts:
          - name: appstore-logs
            mountPath: /appstore/writable/logs
          - name: appstore-debugbar
            mountPath: /appstore/writable/debugbar
          - name: smplapp1-delete-logs-scripts
            mountPath: /appstore/deletelogs

      # Pod shared volumes
      volumes:
      - name: fpm-shared
        emptyDir: {}
      - name: appstore-logs
        emptyDir: {}
      - name: appstore-debugbar
        emptyDir: {}
      - name: smplapp1-fb-config
        configMap:
          name: smplapp1-cm-fb-config
      - name: smplapp1-delete-logs-scripts
        configMap:
          name: smplapp1-cm-delete-logs-scripts
          items:
          - key: log_compress.sh
            path: log_compress.sh
            mode: 0755
          - key: log_compress.conf
            path: log_compress.conf
            mode: 0644




      #podMetadata:
      #  labels:
      #    owner: infra
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app.kubernetes.io/name"
                operator: In
                values:
                - "smplapp1"
            topologyKey: "kubernetes.io/hostname"

      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: smplapp1

---
apiVersion: v1
kind: Service
metadata:
  name: smplapp1
  namespace: smplapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: smplapp1
